--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,18 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  mqtt:
+    image: eclipse-mosquitto:2
+    container_name: mars_iot_mqtt
+    restart: always
+    ports:
+      - '1883:1883'
+      - '9001:9001'
+    volumes:
+      - ./mosquitto/config:/mosquitto/config
+      - ./mosquitto/data:/mosquitto/data
+      - ./mosquitto/log:/mosquitto/log
+
+
 volumes:
   pgdata:
